--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: History-of-the-Impeachment-of-Andrew-Johnson-President-of-the-United-States-by-the-House-of-Re__2442
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Ross, Edmund G. (Edmund Gibson)
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/911
     wikipedia: http://en.wikipedia.org/wiki/Edmund_G._Ross
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2442#History-of-the-Impeachment-of-Andrew-Johnson-President-of-the-United-States-by-the-House-of-Re_
 gutenberg_bookshelf: Crime Nonfiction
 gutenberg_issued: '2000-12-01'
 gutenberg_type: Text
